# shoba

./: .gitignore  .pyre_configuration  README.md  pyproject.toml
shoba/: __main__.py  arena.py  camera.py  menu.py  scene.py
