[tool.poetry]
name = "shoba"
version = "0.1.0"
description = "Shitty Moba"
authors = ["Conrad Ludgate <oon@conradludgate.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pygame = "^1.9"
pyre-check = "^0.0.27"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
